STREET-2386: pass optional MeasureMethods to the startMeasurement API Call

--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
@@ -641,6 +641,9 @@
     <Compile Include="..\Common\Interfaces\Data\MeasurementGeometryType.cs">
       <Link>Interfaces\Data\MeasurementGeometryType.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\Data\MeasureMethods.cs">
+      <Link>Interfaces\Data\MeasureMethods.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\Data\PointBudget.cs">
       <Link>Interfaces\Data\PointBudget.cs</Link>
     </Compile>
