--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
@@ -189,6 +189,9 @@
     <Compile Include="..\Common\API\PointCloudViewerList.cs">
       <Link>API\PointCloudViewerList.cs</Link>
     </Compile>
+    <Compile Include="..\Common\API\Settings.cs">
+      <Link>API\Settings.cs</Link>
+    </Compile>
     <Compile Include="..\Common\API\StreetSmartAPI.cs">
       <Link>API\StreetSmartAPI.cs</Link>
     </Compile>
@@ -558,6 +561,9 @@
     <Compile Include="..\Common\Interfaces\API\IPointCloudViewer.cs">
       <Link>Interfaces\API\IPointCloudViewer.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\API\ISettings.cs">
+      <Link>Interfaces\API\ISettings.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\API\IStreetSmartAPI.cs">
       <Link>Interfaces\API\IStreetSmartAPI.cs</Link>
     </Compile>
@@ -662,6 +668,9 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\Unit.cs">
       <Link>Interfaces\Data\Unit.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\Data\UnitPreference.cs">
+      <Link>Interfaces\Data\UnitPreference.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\ViewerType.cs">
       <Link>Interfaces\Data\ViewerType.cs</Link>
