--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
@@ -188,6 +188,9 @@
     <Compile Include="..\Common\API\Settings.cs">
       <Link>API\Settings.cs</Link>
     </Compile>
+    <Compile Include="..\Common\API\Shortcuts.cs">
+      <Link>API\Shortcuts.cs</Link>
+    </Compile>
     <Compile Include="..\Common\API\StreetSmartAPI.cs">
       <Link>API\StreetSmartAPI.cs</Link>
     </Compile>
@@ -560,6 +563,9 @@
     <Compile Include="..\Common\Interfaces\API\ISettings.cs">
       <Link>Interfaces\API\ISettings.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\API\IShortcuts.cs">
+      <Link>Interfaces\API\IShortcuts.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\API\IStreetSmartAPI.cs">
       <Link>Interfaces\API\IStreetSmartAPI.cs</Link>
     </Compile>
@@ -574,6 +580,12 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\API\PointCloudViewerButtons.cs">
       <Link>Interfaces\API\PointCloudViewerButtons.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\ShortcutNames.cs">
+      <Link>Interfaces\API\ShortcutNames.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\UnitPreference.cs">
+      <Link>Interfaces\API\UnitPreference.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\IAddressSettings.cs">
       <Link>Interfaces\Data\IAddressSettings.cs</Link>
@@ -664,9 +676,6 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\Unit.cs">
       <Link>Interfaces\Data\Unit.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\Interfaces\Data\UnitPreference.cs">
-      <Link>Interfaces\Data\UnitPreference.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\ViewerType.cs">
       <Link>Interfaces\Data\ViewerType.cs</Link>
