--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
@@ -348,6 +348,9 @@
     <Compile Include="..\Common\Data\PanoramaViewerOptions.cs">
       <Link>Data\PanoramaViewerOptions.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\PointCloudViewerOptions.cs">
+      <Link>Data\PointCloudViewerOptions.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\Recording.cs">
       <Link>Data\Recording.cs</Link>
     </Compile>
@@ -504,6 +507,9 @@
     <Compile Include="..\Common\Factories\PanoramaViewerOptionsFactory.cs">
       <Link>Factories\PanoramaViewerOptionsFactory.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Factories\PointCloudViewerOptionsFactory.cs">
+      <Link>Factories\PointCloudViewerOptionsFactory.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Factories\SLDFactory.cs">
       <Link>Factories\SLDFactory.cs</Link>
     </Compile>
@@ -627,6 +633,9 @@
     <Compile Include="..\Common\Interfaces\Data\IPanoramaViewerOptions.cs">
       <Link>Interfaces\Data\IPanoramaViewerOptions.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\Data\IPointCloudViewerOptions.cs">
+      <Link>Interfaces\Data\IPointCloudViewerOptions.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\Data\IRecording.cs">
       <Link>Interfaces\Data\IRecording.cs</Link>
     </Compile>
@@ -653,6 +662,9 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\PointBudget.cs">
       <Link>Interfaces\Data\PointBudget.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\Data\PointCloudType.cs">
+      <Link>Interfaces\Data\PointCloudType.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\PointStyle.cs">
       <Link>Interfaces\Data\PointStyle.cs</Link>
