--- a/StreetSmartAPI/StreetSmart.WinForms.Multiple/StreetSmart.WinForms.Multiple.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms.Multiple/StreetSmart.WinForms.Multiple.x64.csproj
@@ -73,7 +73,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetSmart.API\WinForms\StreetSmart.WinForms.x64.csproj">
+    <ProjectReference Include="..\StreetSmart.API\WinForms.v73\StreetSmart.WinForms.x64.csproj">
       <Project>{11d8ce67-dc5b-4fc9-871b-968b97b5c990}</Project>
       <Name>StreetSmart.WinForms.x64</Name>
     </ProjectReference>
