--- a/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.x64.csproj
@@ -85,7 +85,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetSmart.API\WPF\StreetSmart.WPF.x64.csproj">
+    <ProjectReference Include="..\StreetSmart.API\WPF.v73\StreetSmart.WPF.x64.csproj">
       <Project>{011ec44b-b881-4523-8e5a-f37d47a9edd3}</Project>
       <Name>StreetSmart.WPF.x64</Name>
     </ProjectReference>
