--- a/StreetSmartAPI/StreetSmart.WinForms.Demo/StreetSmart.WinForms.Demo.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms.Demo/StreetSmart.WinForms.Demo.x64.csproj
@@ -110,7 +110,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetSmart.API\WinForms\StreetSmart.WinForms.x64.csproj">
+    <ProjectReference Include="..\StreetSmart.API\WinForms.v73\StreetSmart.WinForms.x64.csproj">
       <Project>{11d8ce67-dc5b-4fc9-871b-968b97b5c990}</Project>
       <Name>StreetSmart.WinForms.x64</Name>
     </ProjectReference>
