--- a/DemoAPI/Demo.WinForms/Demo.WinForms.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.csproj
@@ -50,9 +50,49 @@
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="StreetSmart.WinForms">
-      <HintPath>x64\StreetSmart.WinForms.dll</HintPath>
+      <HintPath>$(Platform)\StreetSmart.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -85,67 +125,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="x64\cef.pak" />
-    <None Include="x64\cef_100_percent.pak" />
-    <None Include="x64\cef_200_percent.pak" />
-    <None Include="x64\cef_extensions.pak" />
-    <None Include="x64\devtools_resources.pak" />
-    <None Include="x64\icudtl.dat" />
-    <None Include="x64\locales\am.pak" />
-    <None Include="x64\locales\ar.pak" />
-    <None Include="x64\locales\bg.pak" />
-    <None Include="x64\locales\bn.pak" />
-    <None Include="x64\locales\ca.pak" />
-    <None Include="x64\locales\cs.pak" />
-    <None Include="x64\locales\da.pak" />
-    <None Include="x64\locales\de.pak" />
-    <None Include="x64\locales\el.pak" />
-    <None Include="x64\locales\en-GB.pak" />
-    <None Include="x64\locales\en-US.pak" />
-    <None Include="x64\locales\es-419.pak" />
-    <None Include="x64\locales\es.pak" />
-    <None Include="x64\locales\et.pak" />
-    <None Include="x64\locales\fa.pak" />
-    <None Include="x64\locales\fi.pak" />
-    <None Include="x64\locales\fil.pak" />
-    <None Include="x64\locales\fr.pak" />
-    <None Include="x64\locales\gu.pak" />
-    <None Include="x64\locales\he.pak" />
-    <None Include="x64\locales\hi.pak" />
-    <None Include="x64\locales\hr.pak" />
-    <None Include="x64\locales\hu.pak" />
-    <None Include="x64\locales\id.pak" />
-    <None Include="x64\locales\it.pak" />
-    <None Include="x64\locales\ja.pak" />
-    <None Include="x64\locales\kn.pak" />
-    <None Include="x64\locales\ko.pak" />
-    <None Include="x64\locales\lt.pak" />
-    <None Include="x64\locales\lv.pak" />
-    <None Include="x64\locales\ml.pak" />
-    <None Include="x64\locales\mr.pak" />
-    <None Include="x64\locales\ms.pak" />
-    <None Include="x64\locales\nb.pak" />
-    <None Include="x64\locales\nl.pak" />
-    <None Include="x64\locales\pl.pak" />
-    <None Include="x64\locales\pt-BR.pak" />
-    <None Include="x64\locales\pt-PT.pak" />
-    <None Include="x64\locales\ro.pak" />
-    <None Include="x64\locales\ru.pak" />
-    <None Include="x64\locales\sk.pak" />
-    <None Include="x64\locales\sl.pak" />
-    <None Include="x64\locales\sr.pak" />
-    <None Include="x64\locales\sv.pak" />
-    <None Include="x64\locales\sw.pak" />
-    <None Include="x64\locales\ta.pak" />
-    <None Include="x64\locales\te.pak" />
-    <None Include="x64\locales\th.pak" />
-    <None Include="x64\locales\tr.pak" />
-    <None Include="x64\locales\uk.pak" />
-    <None Include="x64\locales\vi.pak" />
-    <None Include="x64\locales\zh-CN.pak" />
-    <None Include="x64\locales\zh-TW.pak" />
-    <None Include="x64\natives_blob.bin" />
-    <None Include="x64\snapshot_blob.bin" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -163,30 +142,11 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Content Include="x64\CefSharp.BrowserSubprocess.Core.dll" />
-    <Content Include="x64\CefSharp.BrowserSubprocess.exe" />
-    <Content Include="x64\CefSharp.Core.dll" />
-    <Content Include="x64\CefSharp.Core.xml" />
-    <Content Include="x64\CefSharp.dll" />
-    <Content Include="x64\CefSharp.WinForms.dll" />
-    <Content Include="x64\CefSharp.WinForms.xml" />
-    <Content Include="x64\CefSharp.xml" />
-    <Content Include="x64\chrome_elf.dll" />
-    <Content Include="x64\d3dcompiler_47.dll" />
-    <Content Include="x64\libcef.dll" />
-    <Content Include="x64\libEGL.dll" />
-    <Content Include="x64\libGLESv2.dll" />
-    <Content Include="x64\Newtonsoft.Json.dll" />
-    <Content Include="x64\Newtonsoft.Json.xml" />
-    <Content Include="x64\StreetSmart.WinForms.XML" />
-    <Content Include="x64\widevinecdmadapter.dll" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y "$(ProjectDir)x64\*.*" *
+    <PostBuildEvent>xcopy /Y "$(ProjectDir)$(Platform)\*.*" *
 md locales
-xcopy /Y "$(ProjectDir)x64\locales\*.*" locales\*</PostBuildEvent>
+xcopy /Y "$(ProjectDir)$(Platform)\locales\*.*" locales\*</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
