--- a/StreetSmartAPI/StreetSmart.WinForms.Demo/StreetSmart.WinForms.Demo.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms.Demo/StreetSmart.WinForms.Demo.csproj
@@ -46,6 +46,12 @@
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+      <Compile Include="..\..\DemoAPI\Demo.WinForms\Demo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\..\DemoAPI\Demo.WinForms\Demo.Designer.cs">
+      <DependentUpon>Demo.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\..\DemoAPI\Demo.WinForms\Login.cs">
       <Link>Login.cs</Link>
     </Compile>
@@ -59,6 +65,21 @@
     <Compile Include="..\..\DemoAPI\Demo.WinForms\viewerElement.cs">
       <Link>viewerElement.cs</Link>
     </Compile>
+    <Compile Include="..\..\DemoAPI\Demo.WinForms\Properties\Resources.Designer.cs">
+      <Link>Properties\Resources.Designer.cs</Link>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+	<EmbeddedResource Include="..\..\DemoAPI\Demo.WinForms\Demo.resx">
+      <DependentUpon>Demo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\DemoAPI\Demo.WinForms\Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <SubType>Designer</SubType>
+      <Link>Properties\Resources.resx</Link>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\DemoAPI\Demo.WinForms\App.config" />
