--- a/DemoAPI/Demo.WinForms/Demo.WinForms.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.csproj
@@ -42,11 +42,6 @@
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="StreetSmart.WinForms">
-      <HintPath>$(Platform)\StreetSmart.WinForms.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
@@ -58,15 +53,11 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <PropertyGroup>
-    <PostBuildEvent>xcopy /Y "$(ProjectDir)$(Platform)\*.*" *
-md locales
-xcopy /Y "$(ProjectDir)$(Platform)\locales\*.*" locales\*</PostBuildEvent>
-  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.330701">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+    <PackageReference Include="StreetSmart.WinForms" Version="22.11.0" />
   </ItemGroup>
 </Project>
