STREET-4723: - create document file of the winforms and the wpf api - use caching in the demo app

--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
@@ -41,6 +41,7 @@
 	 <Company>$(Company)</Company>
 	 <AssemblyVersion>$(AssemblyVersion)</AssemblyVersion>
 	 <FileVersion>$(AssemblyVersion)</FileVersion>
+	 <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
