--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
@@ -42,6 +42,9 @@
 	 <AssemblyVersion>$(AssemblyVersion)</AssemblyVersion>
 	 <FileVersion>$(AssemblyVersion)</FileVersion>
 	 <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	 <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+	 <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
+	 <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
@@ -892,12 +895,16 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\..\LICENSE.md" Link="LICENSE.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\..\README.md" Link="README.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="..\..\..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CefSharp.Common.NETCore" Version="107.1.90" />
