STREET-5428: .NET API 23.1

--- a/StreetSmartAPI/StreetSmart.WinForms.Multiple/StreetSmart.WinForms.Multiple.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms.Multiple/StreetSmart.WinForms.Multiple.NET6.csproj
@@ -29,7 +29,7 @@
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetSmart.API\WinForms\StreetSmart.WinForms.csproj" />
+    <ProjectReference Include="..\StreetSmart.API\WinForms\StreetSmart.WinForms.NET6.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.330701">
