--- a/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.NET6.csproj
@@ -27,7 +27,7 @@
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetSmart.API\WPF\StreetSmart.WPF.csproj" />
+    <ProjectReference Include="..\StreetSmart.API\WPF\StreetSmart.WPF.NET6.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.330701">
