STREET-5428: Fixed demo app in .NET 6

--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
@@ -38,6 +38,7 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RootNamespace>StreetSmart.WPF</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <OutputPath>..\..\..\DemoAPI\Demo.WPF\x86\</OutputPath>
