--- a/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.NET6.csproj
@@ -30,8 +30,17 @@
     <ProjectReference Include="..\StreetSmart.API\WPF\StreetSmart.WPF.NET6.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.330701">
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.421302">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="chromiumembeddedframework.runtime.win-arm64" Version="114.2.10" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="chromiumembeddedframework.runtime.win-x64" Version="114.2.10" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="chromiumembeddedframework.runtime.win-x86" Version="114.2.10" />
   </ItemGroup>
 </Project>
