--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFrameworks>net6.0-windows,net48</TargetFrameworks>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
@@ -889,6 +889,23 @@
       <Link>Interfaces\SLD\VendorOptionType.cs</Link>
     </Compile>
   </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net48' ">
+    <None Include="Package.nuspec" />
+    <None Include="StreetSmart.WPF.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="StreetSmartGUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\ReleaseNotes.txt">
       <Link>ReleaseNotes.txt</Link>
@@ -906,7 +923,15 @@
       <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
-  <ItemGroup>
+   <ItemGroup  Condition=" '$(TargetFramework)' == 'net48' ">
+    <PackageReference Include="CefSharp.Wpf">
+      <Version>123.0.60</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
     <PackageReference Include="CefSharp.Common.NETCore" Version="120.2.70" />
     <PackageReference Include="CefSharp.Wpf.NETCore" Version="120.2.70" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
