--- a/StreetSmartAPI/MigrationBackup/b6af83bd/StreetSmart.WinForms.Framework/StreetSmart.WinForms.Framework.csproj
+++ b/StreetSmartAPI/MigrationBackup/b6af83bd/StreetSmart.WinForms.Framework/StreetSmart.WinForms.Framework.csproj
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.props" Condition="Exists('..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.props')" />
+  <Import Project="..\..\packages\cef.redist.x86.114.2.12\build\cef.redist.x86.props" Condition="Exists('..\..\packages\cef.redist.x86.114.2.12\build\cef.redist.x86.props')" />
+  <Import Project="..\..\packages\cef.redist.x64.114.2.12\build\cef.redist.x64.props" Condition="Exists('..\..\packages\cef.redist.x64.114.2.12\build\cef.redist.x64.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{011EC44B-B881-4523-8E5A-F37D47A9EDD3}</ProjectGuid>
+    <ProjectGuid>{11D8CE67-DC5B-4FC9-871B-968B97B5C990}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StreetSmart.Wpf</RootNamespace>
-    <AssemblyName>StreetSmart.Wpf.Framework</AssemblyName>
+    <RootNamespace>StreetSmart.WinForms</RootNamespace>
+    <AssemblyName>StreetSmart.WinForms</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -20,69 +23,84 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WPF</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WINFORMS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;WPF</DefineConstants>
+    <DefineConstants>TRACE;WINFORMS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\..\DemoAPI\Demo.WPF\x64\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WPF</DefineConstants>
+    <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x64\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;WINFORMS</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WPF\x64\StreetSmart.Wpf.Framework.xml</DocumentationFile>
-    <WarningLevel>3</WarningLevel>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x64\StreetSmart.WinForms.xml</DocumentationFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\..\..\DemoAPI\Demo.WPF\x64\</OutputPath>
-    <DefineConstants>TRACE;WPF</DefineConstants>
+    <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x64\</OutputPath>
+    <DefineConstants>TRACE;WINFORMS</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>none</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WPF\x64\StreetSmart.Wpf.Framework.xml</DocumentationFile>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x64\StreetSmart.WinForms.xml</DocumentationFile>
     <DebugSymbols>false</DebugSymbols>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>StreetSmart.WPF.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>StreetSmart.WinForms.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>..\..\..\DemoAPI\Demo.WPF\x86\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WPF</DefineConstants>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WPF\x86\StreetSmart.Wpf.Framework.xml</DocumentationFile>
+    <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;WINFORMS</DefineConstants>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x86\StreetSmart.WinForms.xml</DocumentationFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>..\..\..\DemoAPI\Demo.WPF\x86\</OutputPath>
-    <DefineConstants>TRACE;WPF</DefineConstants>
+    <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
+    <DefineConstants>TRACE;WINFORMS</DefineConstants>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x86\StreetSmart.WinForms.xml</DocumentationFile>
     <Optimize>true</Optimize>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WPF\x86\StreetSmart.Wpf.Framework.xml</DocumentationFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
+    <Reference Include="CefSharp, Version=114.2.120.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CefSharp.Common.114.2.120\lib\net452\CefSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="CefSharp.Core, Version=114.2.120.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CefSharp.Common.114.2.120\lib\net452\CefSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="CefSharp.WinForms, Version=114.2.120.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CefSharp.WinForms.114.2.120\lib\net462\CefSharp.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Xaml" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Common\API\APIBase.cs">
@@ -623,7 +641,7 @@
       <Link>Interfaces\Data\IGeoJsonOverlay.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\IImageCoordinate.cs">
-      <Link>Interfaces\IImageCoordinate.cs</Link>
+      <Link>Interfaces\Data\IImageCoordinate.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\IJson.cs">
       <Link>Interfaces\Data\IJson.cs</Link>
@@ -925,14 +943,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StreetSmartGUI.xaml.cs">
-      <DependentUpon>StreetSmartGUI.xaml</DependentUpon>
+    <Compile Include="StreetSmartGUI.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="WpfApi.cs" />
+    <Compile Include="StreetSmartGUI.Designer.cs">
+      <DependentUpon>StreetSmartGUI.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Package.nuspec" />
-    <None Include="StreetSmart.WPF.snk" />
+    <None Include="packages.config" />
+    <None Include="StreetSmart.WinForms.snk" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -942,26 +962,22 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="StreetSmartGUI.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="..\..\ReleaseNotes.txt">
       <Link>ReleaseNotes.txt</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="CefSharp.Wpf">
-      <Version>123.0.60</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.3</Version>
-    </PackageReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\cef.redist.x64.114.2.12\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x64.114.2.12\build\cef.redist.x64.props'))" />
+    <Error Condition="!Exists('..\..\packages\cef.redist.x86.114.2.12\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x86.114.2.12\build\cef.redist.x86.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.targets'))" />
+  </Target>
+  <Import Project="..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.targets" Condition="Exists('..\..\packages\CefSharp.Common.114.2.120\build\CefSharp.Common.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
