--- a/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.NET6.csproj
@@ -27,20 +27,11 @@
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetSmart.API\WPF\StreetSmart.WPF.NET6.csproj" />
+    <ProjectReference Include="..\StreetSmart.API\WPF\StreetSmart.WPF.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.421302">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="chromiumembeddedframework.runtime.win-arm64" Version="114.2.10" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="chromiumembeddedframework.runtime.win-x64" Version="114.2.10" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="chromiumembeddedframework.runtime.win-x86" Version="114.2.10" />
   </ItemGroup>
 </Project>
