--- a/StreetSmartAPI/StreetSmart.Tests.NET6/StreetSmart.Tests.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.Tests.NET6/StreetSmart.Tests.NET6.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
+	  <Platform>x64</Platform>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
